..F....... [ZBX-27821] fixed button focus outline being cut off

--- a/sass/stylesheets/sass/components/_datatable.scss
+++ b/sass/stylesheets/sass/components/_datatable.scss
@@ -738,6 +738,14 @@
 			.btn-icon:not(.btn-small) {
 				min-width: 18px;
 				height: 18px;
+
+				&:first-of-type {
+					margin-left: 2px;
+				}
+
+				&:last-of-type {
+					margin-right: 2px;
+				}
 			}
 
 			.link-action {
