--- a/ui/assets/styles/hc-dark.css
+++ b/ui/assets/styles/hc-dark.css
@@ -2689,6 +2689,10 @@ button {
       .datatable .cell .cell-inner .btn-icon:not(.btn-small) {
         min-width: 18px;
         height: 18px; }
+        .datatable .cell .cell-inner .btn-icon:not(.btn-small):first-of-type {
+          margin-left: 2px; }
+        .datatable .cell .cell-inner .btn-icon:not(.btn-small):last-of-type {
+          margin-right: 2px; }
       .datatable .cell .cell-inner .action-container {
         display: flex;
         width: 100%; }
